# QuickClaw

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  app.rs  chat.rs  config.rs  environment.rs  main.rs  styles.css  types.ts  wizard.rs
src-tauri/: Cargo.toml  libenvironment.rlib  tauri.conf.json
src-tauri/src/: environment.rs  lib.rs  main.rs  studio.rs
src/components/chat/: ChatView.css  ChatView.tsx
src/components/settings/: Settings.css  Settings.tsx
src/components/shell/: AppShell.css  AppShell.tsx  Sidebar.tsx
src/components/wizard/: EnvCheckStep.tsx  FinishStep.tsx  IdentityStep.tsx  InstallOpenClawStep.tsx  PersonalityStep.tsx  ServerConfigStep.tsx  WelcomeStep.tsx  Wizard.css  Wizard.tsx
src/hooks/: api.ts
src/pages/: BriefCEO.tsx  CEOWorkspace.tsx  Dashboard.tsx  MissionFeed.tsx  SettingsPage.tsx  WorkspaceDetail.tsx  Workspaces.tsx
src/store/: StudioProvider.tsx  studio.ts
