[package]
name = "quickclaw"
version = "0.1.0"
edition = "2021"
description = "QuickClaw - OpenClaw的Rust全平台一站式桌面客户端，是养虾人的Work Studio"
authors = ["QuickClaw Team"]
license = "MIT"
readme = "README.md"
keywords = ["openclaw", "desktop", "gui", "ai", "client"]
categories = ["gui"]

[[bin]]
name = "quickclaw"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33", features = ["default_fonts", "persistence", "glow", "x11", "wayland"] }
egui = { version = "0.33", features = ["default_fonts"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
