[package]
name = "quickclaw"
version = "0.1.0"
edition = "2021"
description = "QuickClaw - OpenClaw的Rust全平台一站式桌面客户端，是养虾人的Work Studio"
authors = ["QuickClaw Team"]
license = "MIT"

[lib]
name = "quickclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
directories = "5"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
